# hud_server

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: cache.py  config.py  main.py  scheduler.py
backend/app/api/: connections.py  docker.py  proxmox.py  setup.py  stream.py
backend/app/collectors/: cloudflare.py  discovery.py  docker_ssh.py  nat.py  proxmox.py  traefik.py
backend/app/models/: base.py  connections.py  docker.py  proxmox.py  snapshot.py
frontend/: index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/connections/: NATPanel.tsx  TraefikPanel.tsx  TunnelPanel.tsx
frontend/src/components/dashboard/: GuestRow.tsx  NodeCard.tsx  ResourceBar.tsx  StatusDot.tsx  TreeDashboard.tsx
frontend/src/components/docker/: ContainerTable.tsx
frontend/src/components/layout/: CollectorBadge.tsx  Sidebar.tsx  TokenGate.tsx  TopBar.tsx
frontend/src/hooks/: useSSE.ts  useToken.ts
frontend/src/pages/: Connections.tsx  Containers.tsx  Dashboard.tsx  SetupWizard.tsx  TopologyMap.tsx
frontend/src/store/: snapshotStore.ts
frontend/src/types/: index.ts
