[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hud-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "proxmoxer>=2.0",
    "requests>=2.31",
    "docker>=7.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "cachetools>=5.3",
    "paramiko>=3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
